replaced time with random() to avoid overflow of long usage

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,12 +13,6 @@ body {
   padding-bottom: 9px;
 }
 
-.SliderGroup {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
-}
-
 .SliderHeader {
   padding-bottom: 5px;
   padding-left: 5px;
